@@ -1,5 +1,10 @@
 2013-02-27 Dario Rodriguez <dario@artica.es>
 
+	* operation/agentes/ver_agente.php: Adapted VMware extension known to
+	new VMware load options.
+
+2013-02-27 Dario Rodriguez <dario@artica.es>
+
 	* include/functions_events.php: Added new fields to events_create_event 
 	function: critical warning and unknown instructions, source and tags.
 	* include/functions_api.php: Reimplemented api_create_event API function, 
